--- a/Untangled/.vscode/tasks.json
+++ b/Untangled/.vscode/tasks.json
@@ -8,7 +8,7 @@
           "kind": "build",
           "isDefault": true
         },
-        "command": "C:\\Program Files\\processing-3.5.3\\processing-java",
+        "command": "${config:processing.path}",
         "presentation": {
           "echo": true,
           "reveal": "always",
@@ -32,3 +32,4 @@
       }
     ]
   }
+  
